syntax = "proto3";

package anysync;

option go_package = "anysync-backend/desktop/proto";

// StorageService provides document storage operations
service StorageService {
  // Put stores a document in a collection
  rpc Put(PutRequest) returns (PutResponse);
  
  // Get retrieves a document by ID from a collection
  rpc Get(GetRequest) returns (GetResponse);
  
  // Delete removes a document by ID from a collection (idempotent)
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  
  // List returns all document IDs in a collection
  rpc List(ListRequest) returns (ListResponse);
}

// PutRequest stores a document
message PutRequest {
  string collection = 1;     // Collection name
  string id = 2;             // Document ID
  string document_json = 3;  // Document as JSON string
}

// PutResponse confirms document storage
message PutResponse {
  bool success = 1;
}

// GetRequest retrieves a document
message GetRequest {
  string collection = 1;  // Collection name
  string id = 2;          // Document ID
}

// GetResponse returns a document
message GetResponse {
  string document_json = 1;  // Document as JSON string (empty if not found)
  bool found = 2;            // Whether document was found
}

// DeleteRequest removes a document
message DeleteRequest {
  string collection = 1;  // Collection name
  string id = 2;          // Document ID
}

// DeleteResponse confirms document deletion
message DeleteResponse {
  bool existed = 1;  // Whether document existed before deletion
}

// ListRequest lists documents in a collection
message ListRequest {
  string collection = 1;  // Collection name
}

// ListResponse returns document IDs
message ListResponse {
  repeated string ids = 1;  // List of document IDs
}
